scss/main/_taskbar.scss
@use "../top/vars" as *;
@use "../top/color-generic" as *;
@use "../top/boxes" as box;
@use "../top/buttons" as bt;
@use "../top/shadows" as shd;

// Servers sidebar / Taskbar
.guilds_a4d4d9 {
    z-index: 0;
    --status-danger: #{$color-ping-1};

    // Unread indicator
    .unreadMentionsIndicatorBottom_fea3ef,
    .unreadMentionsIndicatorTop_fea3ef {
        width: 100%;

        .bar_c10249 {
            border-radius: 0;
            background: linear-gradient(to bottom, transparent, $color-ping-1);
        }
    }

    // Unread icon
    .lowerBadge_c5f96a .numberBadge__40d6f {
        opacity: 0.8;
    }

    .scroller_fea3ef {
        @include box.barGradient(true, $color-window-1, $color-window-2);

        // DMs icon / Start button
        .tutorialContainer_f9623d {
            @include box.barGradient(true, $color-start-1, $color-start-2);
            position: relative;
            padding: 5px 0 30px 0;
            border-radius: 0 0 100% 100% / 0 0 12px 12px;

            .wrapper_c5f96a {
                .svg_c5f96a {
                    height: inherit;
                    width: inherit;
                }

                .wrapper_f90abb {
                    .selected_ae80f7,
                    &:hover {
                        .childWrapper_f90abb {
                            color: $white;
                        }
                    }

                    .childWrapper_f90abb {
                        color: $white-overlay;
                        background: transparent;

                        svg {
                            zoom: 1.5;
                        }
                    }
                }
            }
        }

        // Unread pill
        .item_fd07a3 {
            background: $white;
        }

        // Folder
        .folder_bc7085 {
            background: radial-gradient(circle at 12px 12px, $white, $color-taskbar-1, $color-taskbar-3);
        }

        // Open folder
        .expandedFolderBackground_bc7085 {
            background: linear-gradient(to bottom, $color-taskbar-1, $color-taskbar-2);
        }

        // Add server and discover servers
        // Favourite servers
        .circleIconButton_db6521,
        .childWrapperNoHoverBg_f90abb {
            background: linear-gradient(to bottom, $color-taskbar-1, $color-taskbar-2);
            color: $white-overlay;
        }
    }
}

// Control panel
.panels_a4d4d9 {
    width: $panel-width;
    height: auto;
    position: fixed;
    bottom: -1px;
    left: calc(100vw - $panel-width);
    @include box.barGradient(false, $color-taskbar-1, $color-taskbar-2);

    &:hover {
        z-index: 2;
    }

    &:has(.activityPanel_a4d4d9, .container_adcaac) {
        border-radius: 8px 8px 0 0;
    }

    // Now playing game/activity
    .panel_bf1a22 {
        background: transparent;
        border-bottom: 0;

        // Game title and icon
        .title_d1da5f,
        .badge_c07d45 {
            color: $white;
        }
    }

    .subtext_e06aad {
        color: $white-overlay;
    }

    // Voice chat controls
    .container_adcaac {
        background: inherit;
        border-bottom: 0;

        // Video stream buttons
        .button_adcaac {
            @include bt.button($ISBEIGE: true);

            &.buttonActive_adcaac {
                background: $color-tooltip-2;
                @include shd.boxShadow($ISINSET: true);
            }
        }
    }

    // User and settings
    .container_b2ca13 {
        height: var(--server-container);
        flex-direction: row-reverse;
        background: transparent;

        // Self info
        .avatarWrapper_b2ca13 {
            margin: 0 0 0 6px;
            padding: 0 4px 0 0;
            flex-direction: row-reverse;

            // Username
            .nameTag_b2ca13 {
                text-shadow: 0 1px 1px $black;

                .title_d1da5f {
                    color: $white;
                    font-weight: normal;
                }
            }
        }
    }

    // Buttons
    .button_f67531 {
        color: $white-overlay;
        --interactive-normal: #{$white-overlay};
    }

    .withTagAsButton_b2ca13:hover,
    .withTagless_b2ca13:hover,
    .button_f67531.enabled_f67531:hover {
        background: linear-gradient(to bottom, $color-taskbar-3, $color-taskbar-1);
    }

    .button_f67531.enabled_f67531:hover {
        color: $white;
        --interactive-normal: #{$white};
    }
}

